--- a/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/2-process-approval-request.yml
+++ b/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/2-process-approval-request.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
-uid: learn-bizapps.flow-create-approval.2-process-approval-request 
-title: Process an approval request 
-metadata: 
-  title: Process an approval request 
-  description: Learn how to process an approval request. 
+### YamlMime:ModuleUnit
+uid: learn-bizapps.flow-create-approval.2-process-approval-request
+title: Verarbeiten einer Genehmigungsanforderung
+metadata:
+  title: Verarbeiten einer Genehmigungsanforderung
+  description: Erfahren Sie, wie Sie eine Genehmigungsanforderung verarbeiten.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-durationInMinutes: 15 
-content: | 
-  [!include[](includes/2-process-approval-request.md)]  
+  ms.openlocfilehash: 32e0c444d7102ad1c92ad592bf82b292f95851e2
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330168"
+durationInMinutes: 15
+content: '[!include[](includes/2-process-approval-request.md)]'
