--- a/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/3-powerapps-functions.yml
+++ b/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/3-powerapps-functions.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-customize.3-powerapps-functions
-title: Get started with functions in PowerApps
-metadata: 
-  title: Get started with functions in PowerApps
-  description: Get started with default functions in apps that PowerApps generates.
+title: Erste Schritte mit Funktionen in PowerApps
+metadata:
+  title: Erste Schritte mit Funktionen in PowerApps
+  description: Beginnen Sie mit Standardfunktionen in Apps, die von PowerApps generiert werden.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-durationInMinutes: 15 
-content: | 
-  [!include[](includes/3-powerapps-functions.md)]  
+  ms.openlocfilehash: cae0d9af1673ebdacad50fc7ee247f24a400fb75
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330917"
+durationInMinutes: 15
+content: '[!include[](includes/3-powerapps-functions.md)]'
