--- a/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/3-create-a-model-driven-app.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/3-create-a-model-driven-app.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-design-model-driven-apps.3-create-a-model-driven-app
-title: Create a model-driven app  
-metadata: 
-  title: Create a model-driven app 
-  description: Create a model-driven app
+title: Erstellen einer modellgesteuerten App
+metadata:
+  title: Erstellen einer modellgesteuerten App
+  description: Erstellen einer modellgesteuerten App
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-durationInMinutes: 15 
-content: | 
-  [!include[](includes/3-create-a-model-driven-app.md)]  
+  ms.openlocfilehash: 80df6908dec6781c126d58303e594fa2f524c15e
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330492"
+durationInMinutes: 15
+content: '[!include[](includes/3-create-a-model-driven-app.md)]'
