--- a/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/6-knowledge-check.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/6-knowledge-check.yml
@@ -1,41 +1,46 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-design-model-driven-apps.6-knowledge-check
 metadata:
-  title: "Knowledge check: Get started in model-driven apps"
-  description: This quiz tests your knowledge of how to get started building model-driven apps.
+  title: 'Wissenstest: Erste Schritte mit modellgesteuerten Apps'
+  description: In diesem Quiz wird Ihr Wissen zu den ersten Schritten zum Erstellen modellgesteuerter Apps getestet.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-title: Check your knowledge
+  ms.openlocfilehash: ca2393566430aa7d62e640280f762face9438c59
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44331711"
+title: Überprüfen Sie Ihre Kenntnisse
 durationInMinutes: 5
 quiz:
-  title: "Knowledge check: Get started in model-driven apps"
+  title: 'Wissenstest: Erste Schritte mit modellgesteuerten Apps'
   questions:
-  - content: Which of the following statements about entities is true?
-    choices: 
-    - content: Entities are properties that help define a field.
-      incorrectExplanation: Entities aren't properties. But they have properties.
-      isCorrect: false
-    - content: Entities have fields.
-      incorrectExplanation: Entities don't have fields. Properties have fields.
-      isCorrect: false
-    - content: Account names are a type of entity.
-      correctExplanation: Accounts are a common entity that's used to describe customers.
-      isCorrect: true
-    - content: Relationships associate a field with a property.
-      incorrectExplanation: Relationships define how entities can be related to each other. They don't relate entities or fields.
-      isCorrect: false
-  - content: Which of the following statements about security for model-driven apps is true?
+  - content: Welche der folgenden Aussagen über Entitäten trifft zu?
     choices:
-    - content: Security is based on Microsoft SharePoint permissions.
-      incorrectExplanation: Security for model-driven apps is built on roles that contain a set of privileges.
+    - content: Entitäten sind Eigenschaften, die zur Definition eines Felds beitragen.
+      incorrectExplanation: Entitäten sind keine Eigenschaften. Aber sie verfügen über Eigenschaften.
       isCorrect: false
-    - content: Security roles can be assigned to teams.
-      correctExplanation: Security roles can be assigned to teams and individuals.
+    - content: Entitäten verfügen über Felder.
+      incorrectExplanation: Entitäten verfügen nicht über Felder. Eigenschaften verfügen über Felder.
+      isCorrect: false
+    - content: Kontonamen sind ein Entitätstyp.
+      correctExplanation: Konten sind eine allgemeine Entität, die verwendet wird, um Kunden zu beschreiben.
       isCorrect: true
-    - content: Security roles are defined by Microsoft Windows and can't be changed.
-      incorrectExplanation: Security roles can be customized.
+    - content: Mit Beziehungen wird ein Feld einer Eigenschaft zugeordnet.
+      incorrectExplanation: Beziehungen definieren, wie Entitäten miteinander verknüpft werden können. Sie stellen keine Zusammenhänge zwischen Entitäten oder Feldern her.
+      isCorrect: false
+  - content: Welche der folgenden Aussagen über die Sicherheit für modellgesteuerte Apps ist zutreffend?
+    choices:
+    - content: Sicherheit basiert auf Microsoft SharePoint-Berechtigungen.
+      incorrectExplanation: Sicherheit für modellgesteuerte Apps basiert auf Rollen, die eine Gruppe von Berechtigungen enthalten.
+      isCorrect: false
+    - content: Sicherheitsrollen können Teams zugewiesen werden.
+      correctExplanation: Sicherheitsrollen können Teams und Einzelpersonen zugewiesen werden.
+      isCorrect: true
+    - content: Sicherheitsrollen werden von Microsoft Windows definiert und können nicht geändert werden.
+      incorrectExplanation: Sicherheitsrollen können angepasst werden.
       isCorrect: false
