--- a/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/3-powerapps-environments.yml
+++ b/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/3-powerapps-environments.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-manage.3-powerapps-environments
-title: Understand environments in PowerApps
+title: Verstehen von Umgebungen in PowerApps
 metadata:
-  title: Understand environments in PowerApps
-  description: Learn how to work with environments in PowerApps.
+  title: Verstehen von Umgebungen in PowerApps
+  description: Erfahren Sie, wie Sie mit Umgebungen in PowerApps arbeiten.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
+  ms.openlocfilehash: c3f1796ee1ee65dc9088dfc655ca5ca8e6c175a1
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330197"
 durationInMinutes: 12
-content: |
-  [!include[](includes/3-powerapps-environments.md)]
+content: '[!include[](includes/3-powerapps-environments.md)]'
