--- a/learn-bizapps-pr/flow/get-started-with-flow/1-flow-introduction.yml
+++ b/learn-bizapps-pr/flow/get-started-with-flow/1-flow-introduction.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.flow-get-started.1-flow-introduction
-title: Introducing Microsoft Flow
-metadata: 
-  title: Introducing Microsoft Flow
-  description: Learn the basics of Microsoft Flow. 
+title: Einführung in Microsoft Flow
+metadata:
+  title: Einführung in Microsoft Flow
+  description: Lernen Sie die Grundlagen von Microsoft Flow.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-durationInMinutes: 5 
-content: | 
-  [!include[](includes/1-flow-introduction.md)] 
+  ms.openlocfilehash: d7a58a93c7d39f7b1fb1e9e0973ac7ca4b046cdf
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330173"
+durationInMinutes: 5
+content: '[!include[](includes/1-flow-introduction.md)]'
