--- a/learn-bizapps-pr/flow/get-started-with-flow/2-flow-create-first.yml
+++ b/learn-bizapps-pr/flow/get-started-with-flow/2-flow-create-first.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.flow-get-started.2-flow-create-first
-title: Create your first flow 
-metadata: 
-  title: Create your first flow 
-  description: Learn how to create your first flow.
+title: Erstellen Ihres ersten Flows
+metadata:
+  title: Erstellen Ihres ersten Flows
+  description: Erfahren Sie, wie Sie Ihren ersten Flow erstellen.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-durationInMinutes: 15 
-content: | 
-  [!include[](includes/2-flow-create-first.md)] 
+  ms.openlocfilehash: a2b22713d3e9177f255028c46471d0d72e69b791
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330185"
+durationInMinutes: 15
+content: '[!include[](includes/2-flow-create-first.md)]'
