--- a/learn-bizapps-pr/flow/get-started-with-flow/index.yml
+++ b/learn-bizapps-pr/flow/get-started-with-flow/index.yml
@@ -1,30 +1,33 @@
-### YamlMime:Module 
-uid: learn-bizapps.flow-get-started 
-metadata: 
-  title: Get started with Microsoft Flow 
-  description: Learn how to create an approval request for a SharePoint list.
+### YamlMime:Module
+uid: learn-bizapps.flow-get-started
+metadata:
+  title: Erste Schritte mit Microsoft Flow
+  description: Informationen zum Erstellen eines Genehmigungsflows für eine SharePoint-Liste.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-title: Get started with Microsoft Flow 
-summary: This module teaches you the basics of creating an approval flow.
-#TODO: Update abstract to be in the format 'In this module, you will: X, Y, Z...' right now the summary and the abstract are duplicating information and they're shown right next to each other on the module landing page.
-abstract: This module teaches you how to create an approval flow that uses a SharePoint list. You'll learn how to create a SharePoint list where people can suggest Twitter tweets that can later be approved and posted.
-prerequisites: None
-#TODO: Update with real image.
-iconUrl: http://via.placeholder.com/120x120 
-levels:  
-- beginner 
-roles:  
-- business-user 
-products:  
+  ms.openlocfilehash: 6cb1276ae4b51088a3b860208e926fc71267aa99
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44331375"
+title: Erste Schritte mit Microsoft Flow
+summary: In diesem Modul erfahren Sie grundlegendes zum Erstellen eines Genehmigungsflows.
+abstract: In diesem Modul erfahren Sie, wie Sie einen Genehmigungsflow erstellen, der eine SharePoint-Liste verwendet. Sie erfahren, wie Sie eine SharePoint-Liste erstellen, für die Benutzer Twitter-Tweets vorschlagen können, die später genehmigt und veröffentlicht werden können.
+prerequisites: Keine
+iconUrl: http://via.placeholder.com/120x120
+levels:
+- beginner
+roles:
+- business-user
+products:
 - bizapps
 - bizapps-d365
 - bizapps-flow
-units: 
+units:
 - learn-bizapps.flow-get-started.1-flow-introduction
 - learn-bizapps.flow-get-started.2-flow-create-first
 - learn-bizapps.flow-get-started.3-flow-mobile-app
