--- a/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/1-create-approval-request.yml
+++ b/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/1-create-approval-request.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.flow-create-approval.1-create-approval-request
-title: Create an approval request for a SharePoint list 
-metadata: 
-  title: Create an approval request for a SharePoint list 
-  description: Learn how to create an approval SharePoint list. 
+title: Erstellen einer Genehmigungsanforderung für eine SharePoint-Liste
+metadata:
+  title: Erstellen einer Genehmigungsanforderung für eine SharePoint-Liste
+  description: Erfahren Sie, wie Sie eine Genehmigungsanforderung für eine SharePoint-Liste erstellen.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-durationInMinutes: 15 
-content: | 
-  [!include[](includes/1-create-approval-request.md)]  
+  ms.openlocfilehash: d979e0ebb258bc46951dd8adcb55ff5382d6cfe3
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330593"
+durationInMinutes: 15
+content: '[!include[](includes/1-create-approval-request.md)]'
