--- a/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/4-quiz-flow-approval.yml
+++ b/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/4-quiz-flow-approval.yml
@@ -1,52 +1,57 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.flow-create-approval.4-quiz-flow-approval
-title: Check your knowledge
-metadata: 
-  title: "Knowledge check: Create an approval flow" 
-  description: This quiz tests your knowledge of how to create an approval flow. 
+title: Überprüfen Sie Ihre Kenntnisse
+metadata:
+  title: 'Wissenstest: Erstellen eines Genehmigungsflows'
+  description: Mit diesem Quiz testen Sie Ihr Wissen zum Erstellen eines Genehmigungsflows.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-durationInMinutes: 12 
-quiz: 
-  title: "Knowledge check: Create an approval flow" 
-  questions: 
-  - content: Where can you start an approval flow? 
-    choices:  
-    - content: On the Microsoft Flow website.  
-      correctExplanation: Approval flows always start on the Microsoft Flow website. 
-      isCorrect: true 
-    - content: From Twitter.
-      incorrectExplanation: Flows can't be started from social media sites like Twitter. They're typically started from either the Microsoft Flow website or the Microsoft Flow mobile app. 
-      isCorrect: false 
-    - content: In Microsoft SharePoint.
-      incorrectExplanation: SharePoint can be involved in a flow process, but it isn't where flows are created. 
-      isCorrect: false 
-    - content: In Microsoft PowerApps Studio.
-      incorrectExplanation: PowerApps Studio is where you design PowerApps apps. It isn't where you create flows. 
-      isCorrect: false 
-  - content: Which of the following statements about the connectors used in flows is true? 
-    choices: 
-    - content: Connectors let you start a flow. 
-      incorrectExplanation: Flows are started on the Microsoft Flow website. Typically, connectors are used after a flow is created. 
-      isCorrect: false 
-    - content: Twitter is a type of connector. 
-      correctExplanation: Twitter is one of many connectors that can be used in flows. 
-      isCorrect: true 
-    - content: Connectors have actions and procedures. 
-      incorrectExplanation: Connectors have actions and triggers. 
-      isCorrect: false 
-  - content: Who can create flows? 
-    choices: 
-    - content: Only an admin can start a flow. 
-      incorrectExplanation: Anyone can create flows. But sometimes an admin must manage flows. 
-      isCorrect: false 
-    - content: Only someone with the Microsoft Flow mobile app can create a flow. 
-      isCorrect: false 
-      incorrectExplanation: Flows can be created from both the Microsoft Flow website and the mobile app. 
-    - content: Anyone can create a flow. 
-      correctExplanation: Anyone with the correct credentials can create flows. 
+  ms.openlocfilehash: 5b2a69640769d71984d60d14ed7de0f0ed2fa4cb
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44331405"
+durationInMinutes: 12
+quiz:
+  title: 'Wissenstest: Erstellen eines Genehmigungsflows'
+  questions:
+  - content: Wo können Sie mit einem Genehmigungsflow beginnen?
+    choices:
+    - content: Auf der Microsoft Flow-Website.
+      correctExplanation: Genehmigungsflows beginnen immer auf der Microsoft Flow-Website.
+      isCorrect: true
+    - content: Über Twitter
+      incorrectExplanation: Flows können nicht über Social Media-Websites wie Twitter beginnen. In der Regel werden sie entweder über die Microsoft Flow-Website oder über die Mobile App für Microsoft Flow gestartet.
+      isCorrect: false
+    - content: In Microsoft SharePoint
+      incorrectExplanation: SharePoint kann in den Prozess eines Flows miteinbezogen werden, sie werden jedoch nicht in SharePoint erstellt.
+      isCorrect: false
+    - content: In Microsoft PowerApps Studio
+      incorrectExplanation: In PowerApps Studio entwerfen Sie PowerApps-Apps. Damit erstellen Sie keine Flows.
+      isCorrect: false
+  - content: Welche der folgenden Aussagen über die in Flows verwendeten Connectors treffen zu?
+    choices:
+    - content: Mit Connectors können Sie einen Flow starten.
+      incorrectExplanation: Flows werden auf der Microsoft Flow-Website gestartet. Connectors werden in der Regel verwendet, nachdem ein Flow erstellt wurde.
+      isCorrect: false
+    - content: Twitter ist ein Connector.
+      correctExplanation: Twitter ist einer von vielen Connectors, die in Flows verwendet werden können.
+      isCorrect: true
+    - content: Connectors verfügen über Aktionen und Prozeduren.
+      incorrectExplanation: Connectors verfügen über Aktionen und Auslöser.
+      isCorrect: false
+  - content: Wer kann Flows erstellen?
+    choices:
+    - content: Nur ein Administrator kann einen Flow starten.
+      incorrectExplanation: Jeder kann Flows erstellen. Jedoch muss manchmal ein Administrator Flows verwalten.
+      isCorrect: false
+    - content: Nur jemand mit der mobilen App für Microsoft Flow kann einen Flow erstellen.
+      isCorrect: false
+      incorrectExplanation: Flows können sowohl über die Microsoft Flow-Website als auch über die mobile App erstellt werden.
+    - content: Jeder kann einen Flow erstellen.
+      correctExplanation: Jeder, der über die richtigen Anmeldeinformationen verfügt, kann Flows erstellen.
       isCorrect: true
