--- a/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/2-connect-to-data-sources-in-power-bi-desktop.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/2-connect-to-data-sources-in-power-bi-desktop.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.build-your-first-report.2-connect-to-data-sources-in-power-bi-desktop
+uid: learn-bizapps.build-your-first-report.2-connect-to-data-sources-in-power-bi-desktop
 metadata:
-  title: Connect to data source in Power BI desktop
-  description: Connect to data source in Power BI desktop
+  title: Herstellen einer Verbindung mit einer Datenquelle in Power BI Desktop
+  description: Herstellen einer Verbindung mit einer Datenquelle in Power BI Desktop
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Connect to data source in Power BI desktop
-durationInMinutes: 10
-content: |
- [!include[](includes/2-connect-to-data-sources-in-power-bi-desktop.md)]
+  ms.openlocfilehash: b223eb69ff729a949a7c490fcec437b5b1069405
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500570"
+title: Herstellen einer Verbindung mit einer Datenquelle in Power BI Desktop
+durationInMinutes: 5
+content: '[!include[](includes/2-connect-to-data-sources-in-power-bi-desktop.md)]'
