--- a/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/3-clean-and-transform-data-with-power-query-editor.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/3-clean-and-transform-data-with-power-query-editor.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.build-your-first-report.3-clean-and-transform-data-with-power-query-editor
+uid: learn-bizapps.build-your-first-report.3-clean-and-transform-data-with-power-query-editor
 metadata:
-  title: Clean and transform data with Power Query editor
-  description: Clean and transform data with Power Query editor
+  title: Bereinigen und Transformieren von Daten mit dem Power Query-Editor
+  description: Bereinigen und Transformieren von Daten mit dem Power Query-Editor
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Clean and transform data with Power Query editor
-durationInMinutes: 10
-content: |
- [!include[](includes/3-clean-and-transform-data-with-power-query-editor.md)]
+  ms.openlocfilehash: 1c9c83a17a7e91d06855f86f280e91accf96dd8b
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500312"
+title: Bereinigen und Transformieren von Daten mit dem Power Query-Editor
+durationInMinutes: 20
+content: '[!include[](includes/3-clean-and-transform-data-with-power-query-editor.md)]'
