--- a/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/5-exercise-share-a-power-bi-report.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/5-exercise-share-a-power-bi-report.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.build-your-first-report.5-exercise-share-a-power-bi-report
+uid: learn-bizapps.build-your-first-report.5-exercise-share-a-power-bi-report
 metadata:
-  title: Exercise - Share a Power BI report
-  description: Exercise - Share a Power BI report
+  title: 'Übung: Freigeben eines Power BI-Berichts'
+  description: 'Übung: Freigeben eines Power BI-Berichts'
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Exercise - Share a Power BI report
-durationInMinutes: 10
-content: |
- [!include[](includes/5-exercise-share-a-power-bi-report.md)]
+  ms.openlocfilehash: c4028f7dcca8702a3557103023a02de224380da6
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500470"
+title: 'Übung: Freigeben eines Power BI-Berichts'
+durationInMinutes: 5
+content: '[!include[](includes/5-exercise-share-a-power-bi-report.md)]'
