--- a/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/6-summary-cleanup.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/6-summary-cleanup.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.build-your-first-report.6-summary-cleanup
+uid: learn-bizapps.build-your-first-report.6-summary-cleanup
 metadata:
-  title: Summary and cleanup
-  description: Summary and cleanup
+  title: Zusammenfassung und Cleanup
+  description: Zusammenfassung und Cleanup
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Summary and cleanup
-durationInMinutes: 5
-content: |
- [!include[](includes/6-summary-cleanup.md)]
+  ms.openlocfilehash: 8cea4cea91d40415f03302e015be188f10f4ec34
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500418"
+title: Zusammenfassung und Cleanup
+durationInMinutes: 2
+content: '[!include[](includes/6-summary-cleanup.md)]'
