--- a/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/index.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/index.yml
@@ -1,20 +1,23 @@
 ### YamlMime:Module
-uid: learn.build-your-first-report
+uid: learn-bizapps.build-your-first-report
 metadata:
-  title: Create and share your first Power BI report
-  description: With Power BI you can create compelling visuals and reports. In this module you learn how to use Power BI Desktop to connect to data, build visuals, and create a report that you can share with others in your organization. Then you learn how to publish the report to the Power BI service, and let others see your insights and benefit from your work.
+  title: Erstellen und Freigeben Ihres ersten Power BI-Berichts
+  description: Mit Power BI können Sie ansprechende visuelle Elemente und Berichte erstellen. In diesem Modul wird beschrieben, wie Sie Power BI Desktop zum Herstellen einer Verbindung mit Daten, Erstellen von visuellen Elementen und Erstellen eines Berichts verwenden, den Sie für andere Personen in Ihrer Organisation freigeben können. Anschließend erfahren Sie, wie Sie den Bericht für den Power BI-Dienst veröffentlichen und Ihre Erkenntnisse und die sich ergebenden Vorteile aus Ihrer Arbeit anderen Personen zugänglich machen können.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Get started with Power BI
-summary: Learn how to create a report in Power BI, and how to share the report with others.
-#TODO: Update abstract to be in the format 'In this module, you will: X, Y, Z...' right now the summary and the abstract are duplicating information and they're shown right next to each other on the module landing page.
-abstract: With Power BI you can create compelling visuals and reports. In this module you learn how to use Power BI Desktop to connect to data, build visuals, and create a report that you can share with others in your organization. Then you learn how to publish the report to the Power BI service, and let others see your insights and benefit from your work.
-prerequisites: None
-#TODO: Update with real image.
+  ms.openlocfilehash: 7d2f9df7d86bb81bc298395115a0df1a4bb1d7b5
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500625"
+title: Erstellen und Freigeben Ihres ersten Power BI-Berichts
+summary: Es wird beschrieben, wie Sie in Power BI einen Bericht erstellen und den Bericht für andere Personen freigeben.
+abstract: Mit Power BI können Sie ansprechende visuelle Elemente und Berichte erstellen. In diesem Modul wird beschrieben, wie Sie Power BI Desktop zum Herstellen einer Verbindung mit Daten, Erstellen von visuellen Elementen und Erstellen eines Berichts verwenden, den Sie für andere Personen in Ihrer Organisation freigeben können. Anschließend erfahren Sie, wie Sie den Bericht für den Power BI-Dienst veröffentlichen und Ihre Erkenntnisse und die sich ergebenden Vorteile aus Ihrer Arbeit anderen Personen zugänglich machen können.
+prerequisites: Keine
 iconUrl: http://via.placeholder.com/120x120
 levels:
 - intermediate
@@ -24,10 +27,10 @@ products:
 - bizapps
 - bizapps-power-bi
 units:
-- learn.build-your-first-report.1-introduction
-- learn.build-your-first-report.2-connect-to-data-sources-in-power-bi-desktop
-- learn.build-your-first-report.3-clean-and-transform-data-with-power-query-editor
-- learn.build-your-first-report.4-exercise-create-visuals-in-power-bi
-- learn.build-your-first-report.5-exercise-share-a-power-bi-report
-- learn.build-your-first-report.6-summary-cleanup
+- learn-bizapps.build-your-first-report.1-introduction
+- learn-bizapps.build-your-first-report.2-connect-to-data-sources-in-power-bi-desktop
+- learn-bizapps.build-your-first-report.3-clean-and-transform-data-with-power-query-editor
+- learn-bizapps.build-your-first-report.4-exercise-create-visuals-in-power-bi
+- learn-bizapps.build-your-first-report.5-exercise-share-a-power-bi-report
+- learn-bizapps.build-your-first-report.6-summary-cleanup
 achievement: learn.build-your-first-report.badge
