--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/1-introduction.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/1-introduction.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.get-started-with-power-bi.1-introduction
+uid: learn-bizapps.get-started-with-power-bi.1-introduction
 metadata:
-  title: Introduction
-  description: Introduction
+  title: Einführung
+  description: Einführung
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Introduction
-durationInMinutes: 3
-content: |
- [!include[](includes/1-introduction.md)]
+  ms.openlocfilehash: 1f8479ccad2228795f59d2cdb9e32660f9fb7b32
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500444"
+title: Einführung
+durationInMinutes: 6
+content: '[!include[](includes/1-introduction.md)]'
