--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/2-using-power-bi.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/2-using-power-bi.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.get-started-with-power-bi.2-using-power-bi
+uid: learn-bizapps.get-started-with-power-bi.2-using-power-bi
 metadata:
-  title: Using Power BI
-  description: Using Power BI
+  title: Verwenden von Power BI
+  description: Verwenden von Power BI
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Using Power BI
-durationInMinutes: 10
-content: |
- [!include[](includes/2-using-power-bi.md)]
+  ms.openlocfilehash: 2422478ea78552ca3e1645dc68fce4f9e4220535
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500648"
+title: Verwenden von Power BI
+durationInMinutes: 4
+content: '[!include[](includes/2-using-power-bi.md)]'
