--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/3-building-blocks-of-power-bi.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/3-building-blocks-of-power-bi.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.get-started-with-power-bi.3-building-blocks-of-power-bi
+uid: learn-bizapps.get-started-with-power-bi.3-building-blocks-of-power-bi
 metadata:
-  title: Building blocks of Power BI
-  description: Building blocks of Power BI
+  title: Power BI-Bausteine
+  description: Power BI-Bausteine
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Building blocks of Power BI
-durationInMinutes: 10
-content: |
- [!include[](includes/3-building-blocks-of-power-bi.md)]
+  ms.openlocfilehash: 7184918287359f926c06fe1037f32ff30ff47833
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500478"
+title: Power BI-Bausteine
+durationInMinutes: 12
+content: '[!include[](includes/3-building-blocks-of-power-bi.md)]'
