--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/4-exercise-touring-and-using-power-bi.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/4-exercise-touring-and-using-power-bi.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.get-started-with-power-bi.4-exercise-touring-and-using-power-bi
+uid: learn-bizapps.get-started-with-power-bi.4-exercise-touring-and-using-power-bi
 metadata:
-  title: Exercise - touring and using the Power BI service
-  description: IntroductiExercise - touring and using the Power BI serviceon
+  title: 'Übung: Überblick über den Power BI-Dienst und dessen Nutzung'
+  description: 'Einführungsübung: Überblick über den Power BI-Dienst und dessen Nutzung'
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Exercise - touring and using the Power BI service
-durationInMinutes: 10
-content: |
- [!include[](includes/4-exercise-touring-and-using-power-bi.md)]
+  ms.openlocfilehash: 2d9adb30423a63d74e360f61e659029f539d660b
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500311"
+title: 'Übung: Überblick über den Power BI-Dienst und dessen Nutzung'
+durationInMinutes: 12
+content: '[!include[](includes/4-exercise-touring-and-using-power-bi.md)]'
