--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/5-summary-cleanup.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/5-summary-cleanup.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn.get-started-with-power-bi.5-summary-cleanup
+uid: learn-bizapps.get-started-with-power-bi.5-summary-cleanup
 metadata:
-  title: Summary and cleanup
-  description: Summary and cleanup
+  title: Zusammenfassung und Cleanup
+  description: Zusammenfassung und Cleanup
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-title: Summary and cleanup
+  ms.openlocfilehash: 171995fe0d33990a9e39aff4c69710a017caa55a
+  ms.sourcegitcommit: 6d796874539f76b734a7bb8ff95bef6b87bb9b00
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/11/2018
+  ms.locfileid: "44374982"
+title: Zusammenfassung und Cleanup
 durationInMinutes: 5
-content: |
- [!include[](includes/5-summary-cleanup.md)]
+content: '[!include[](includes/5-summary-cleanup.md)]'
