--- a/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/1-powerapps-customize.yml
+++ b/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/1-powerapps-customize.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-customize.1-powerapps-customize
-title: Improve apps by making basic customizations in PowerApps
-metadata: 
-  title: Improve apps by making basic customizations in PowerApps
-  description: Make basic customizations to your apps, such as choosing a layout and reordering fields. 
+title: Verbessern von Apps durch grundlegende Anpassungen in PowerApps
+metadata:
+  title: Verbessern von Apps durch grundlegende Anpassungen in PowerApps
+  description: Nehmen Sie grundlegende Anpassungen in Ihren Apps vor, indem Sie z.B. ein Layout auswählen und Felder neu anordnen.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-durationInMinutes: 10 
-content: | 
-  [!include[](includes/1-powerapps-customize.md)]  
+  ms.openlocfilehash: b9e2c00d295fbfb9d313c1e991dd5eade936f4e5
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330120"
+durationInMinutes: 10
+content: '[!include[](includes/1-powerapps-customize.md)]'
