--- a/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/2-powerapps-explore.yml
+++ b/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/2-powerapps-explore.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-customize.2-powerapps-explore
-title: Explore screens and controls in PowerApps
+title: Erkunden von Bildschirmen und Steuerelementen in PowerApps
 metadata:
-  title: Explore screens and controls in PowerApps
-  description: Learn about the default screens and controls in an app that PowerApps generates.
+  title: Erkunden von Bildschirmen und Steuerelementen in PowerApps
+  description: Hier erfahren Sie mehr über die standardmäßigen Bildschirme und Steuerelemente in einer App, die von PowerApps generiert wird.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
+  ms.openlocfilehash: 1f148433da4653aa6aecc5afeef916ff1d315150
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330521"
 durationInMinutes: 5
-content: | 
-  [!include[](includes/2-powerapps-explore.md)]  
+content: '[!include[](includes/2-powerapps-explore.md)]'
