--- a/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/2-building-blocks-of-model-driven-apps.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/2-building-blocks-of-model-driven-apps.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-design-model-driven-apps.2-building-blocks-of-model-driven-apps
-title: Building blocks of model-driven apps  
-metadata: 
-  title: Building blocks of model-driven apps
-  description: Building blocks of model-driven apps
+title: Bausteine modellgesteuerter Apps
+metadata:
+  title: Bausteine modellgesteuerter Apps
+  description: Bausteine modellgesteuerter Apps
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-durationInMinutes: 10 
-content: | 
-  [!include[](includes/2-building-blocks-of-model-driven-apps.md)]  
+  ms.openlocfilehash: 26c409d3b1ac053e847b7cd5ae7646e9e8ec38c3
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44331639"
+durationInMinutes: 10
+content: '[!include[](includes/2-building-blocks-of-model-driven-apps.md)]'
