--- a/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/4-explore-sample-model-driven-apps.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/4-explore-sample-model-driven-apps.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-design-model-driven-apps.4-explore-sample-model-driven-apps
-title: Explore sample model-driven apps  
-metadata: 
-  title: Explore sample model-driven apps 
-  description: Explore sample model-driven apps
+title: Untersuchen von Beispielen modellgesteuerter Apps
+metadata:
+  title: Untersuchen von Beispielen modellgesteuerter Apps
+  description: Untersuchen von Beispielen modellgesteuerter Apps
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-durationInMinutes: 10 
-content: | 
-  [!include[](includes/4-explore-sample-model-driven-apps.md)]  
+  ms.openlocfilehash: 8f5f36df1b367cbd3e5862f5f391cc01d82f987e
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330533"
+durationInMinutes: 10
+content: '[!include[](includes/4-explore-sample-model-driven-apps.md)]'
