--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps-business-process-flows/1-introduction.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps-business-process-flows/1-introduction.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
-uid: learn-bizapps.powerapps-design-model-driven-apps.1-introduction
-title: Einführung in modellgesteuerte Apps
+uid: learn-bizapps.powerapps-business-process-flow.1-introduction
+title: Einführung in den Geschäftsprozessflow
 metadata:
-  title: Einführung in modellgesteuerte Apps
-  description: Einführung in modellgesteuerte Apps
+  title: Einführung in den Geschäftsprozessflow
+  description: Einführung in den Geschäftsprozessflow
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: ce8ab9b77fd5ea8e2f7252558ab7d7578d689ceb
+  ms.openlocfilehash: 95de18cafb553f7e8acce6c7355991d4ac27d897
   ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
   ms.translationtype: HT
   ms.contentlocale: de-DE
   ms.lasthandoff: 09/10/2018
-  ms.locfileid: "44331670"
-durationInMinutes: 5
+  ms.locfileid: "44330156"
+durationInMinutes: 12
 content: '[!include[](includes/1-introduction.md)]'
