--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/2-learn-about-entities.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/2-learn-about-entities.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-common-data-service.2-learn-about-entities
-title: Learn about entities  
-metadata: 
-  title: Learn about entities
-  description: Learn about entities
+title: Informationen zu Entitäten
+metadata:
+  title: Informationen zu Entitäten
+  description: Informationen zu Entitäten
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-durationInMinutes: 12 
-content: | 
-  [!include[](includes/2-learn-about-entities.md)]  
+  ms.openlocfilehash: 6cc83e157e4ea7ecb4940f041a371f4bc1085b9d
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330252"
+durationInMinutes: 12
+content: '[!include[](includes/2-learn-about-entities.md)]'
