--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/5-summary.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/5-summary.yml
@@ -1,9 +1,14 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-common-data-service.5-summary
-title: Summary  
-metadata: 
-  title: Summary 
-  description: Summary
+title: Zusammenfassung
+metadata:
+  title: Zusammenfassung
+  description: Zusammenfassung
+  ms.openlocfilehash: b50568eb039bd829a2966a927969e73ff234533a
+  ms.sourcegitcommit: 6d796874539f76b734a7bb8ff95bef6b87bb9b00
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/11/2018
+  ms.locfileid: "44375888"
 durationInMinutes: 2
-content: | 
-  [!include[](includes/5-summary.md)]  
+content: '[!include[](includes/5-summary.md)]'
