--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps/1-powerapps-introduction.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps/1-powerapps-introduction.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-get-started.1-powerapps-introduction
-title: Introducing Microsoft PowerApps
+title: Einführung in Microsoft PowerApps
 metadata:
-  title: Introducing Microsoft PowerApps
-  description: This module teaches you the basics of Microsoft PowerApps.
+  title: Einführung in Microsoft PowerApps
+  description: In diesem Modul erhalten Sie Informationen zu den Microsoft PowerApps-Grundlagen.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
+  ms.openlocfilehash: 6dfd29d815d68cd583eeec42e6d24957dffdcb6e
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44331567"
 durationInMinutes: 5
-content: |
-  [!include[](includes/1-powerapps-introduction.md)]
+content: '[!include[](includes/1-powerapps-introduction.md)]'
