--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps/5-powerapps-create-first.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps/5-powerapps-create-first.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-get-started.5-powerapps-create-first
-title: Create your first PowerApps app
+title: Erstellen Ihrer ersten PowerApps-App
 metadata:
-  title: Create your first app in PowerApps
-  description: Learn to build your first app in PowerApps.
+  title: Erstellen Ihrer ersten App in PowerApps
+  description: Erfahren Sie, wie Sie Ihre erste App in PowerApps erstellen.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
+  ms.openlocfilehash: ec341f461f4a3d32af189272d05832b31a475d21
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44331514"
 durationInMinutes: 15
-content: |
-  [!include[](includes/5-powerapps-create-first.md)]
+content: '[!include[](includes/5-powerapps-create-first.md)]'
