--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps/index.yml
@@ -1,30 +1,38 @@
 ### YamlMime:Module
 uid: learn-bizapps.powerapps-get-started
 metadata:
-  title: Get started with PowerApps
-  description: Learn the basics of PowerApps and how you can use it in your organization.
+  title: Erste Schritte mit PowerApps
+  description: Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-title: Get started with PowerApps
-summary: Learn the basics of PowerApps and how you can use it in your organization.
-abstract: |
-  In this module, you will:
-  - Explore how PowerApps can make your business more efficent.
-  - Understand how you use different technologies to perform different tasks in PowerApps.
-  - Understand the different ways to build an app in PowerApps.
-  - Create your first app from data in an Excel workbook.
-prerequisites: None
-#TODO: Update with real image.
+  ms.openlocfilehash: 3b10922017b90ab7705bec589ceec3c90153f761
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330257"
+title: Erste Schritte mit PowerApps
+summary: Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.
+abstract: >
+  Aufgaben in diesem Modul:
+
+  - Finden Sie heraus, wie PowerApps zur Effizienz Ihres Unternehmens beitragen kann.
+
+  - Erfahren Sie, wie Sie verschiedene Technologien verwenden, um verschiedene Aufgaben in PowerApps zu erledigen.
+
+  - Lernen Sie die verschiedenen Möglichkeiten zum Erstellen einer App in PowerApps kennen.
+
+  - Erstellen Sie Ihre erste App aus Daten in einer Excel-Arbeitsmappe.
+prerequisites: Keine
 iconUrl: http://via.placeholder.com/120x120
-levels: 
+levels:
 - beginner
-roles: 
+roles:
 - business-user
-products: 
+products:
 - bizapps
 - bizapps-d365
 - bizapps-power-apps
