--- a/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/1-powerapps-versions.yml
+++ b/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/1-powerapps-versions.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-manage.1-powerapps-versions
-title: Manage app versions in PowerApps
+title: Verwalten von App-Versionen in PowerApps
 metadata:
-  title: Manage app versions in PowerApps
-  description: Learn how to review and restore previous versions of your apps in PowerApps.
+  title: Verwalten von App-Versionen in PowerApps
+  description: Erfahren Sie, wie Sie frühere Versionen Ihrer Apps in PowerApps überprüfen und wiederherstellen.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
+  ms.openlocfilehash: 139075b4bd664a641d94481933620113cc5f5894
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330209"
 durationInMinutes: 5
-content: |
-  [!include[](includes/1-powerapps-versions.md)]
+content: '[!include[](includes/1-powerapps-versions.md)]'
