--- a/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/4-review-powerapps.yml
+++ b/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/4-review-powerapps.yml
@@ -1,15 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-manage.4-review-powerapps
-title: PowerApps review
+title: Überblick über PowerApps
 metadata:
-  title: PowerApps review
-  description: Review what you've learned so far.
+  title: Überblick über PowerApps
+  description: Überprüfen Sie, was Sie bisher gelernt haben.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
+  ms.openlocfilehash: 840a9cf1d68343abf16910d74fc16a649723d9ec
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330305"
 durationInMinutes: 5
-content: |
-  [!include[](includes/4-review-powerapps.md)]
+content: '[!include[](includes/4-review-powerapps.md)]'
