--- a/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/index.yml
@@ -1,34 +1,33 @@
 ### YamlMime:Module
-uid: learn-bizapps.powerapps-manage 
-metadata: 
-  title: Manage apps in PowerApps
-  description: Manage app versions, app sharing, and environments in PowerApps.
+uid: learn-bizapps.powerapps-manage
+metadata:
+  title: Verwalten von Apps in PowerApps
+  description: Verwalten Sie App-Versionen, App-Freigaben und Umgebungen in PowerApps.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-title: Manage apps in PowerApps 
-summary: Manage app versions, app sharing, and environments in PowerApps. 
-abstract: |
-  In this module, you will: 
-  - Learn how to review and restore app versions.
-  - Explore how to share an app, including permissions and notification.
-  - Understand what environments are, how to create them, and how to manage security.
-  - Find more information about PowerApps.
-prerequisites: None
-#TODO: Update with real image.
+  ms.openlocfilehash: 08fb2d98e69df17fc3662f740e5c4de3da7b8eed
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44331490"
+title: Verwalten von Apps in PowerApps
+summary: Verwalten Sie App-Versionen, App-Freigaben und Umgebungen in PowerApps.
+abstract: "Aufgaben in diesem Modul: \n- Lernen Sie, wie Sie App-Versionen überprüfen und wiederherstellen.\n- Finden Sie heraus, wie Sie eine App freigeben, einschließlich Berechtigungen und Benachrichtigungen.\n- Erfahren Sie, was Umgebungen sind, wie sie erstellt werden und wie die Sicherheitsverwaltung funktioniert.\n- Erhalten Sie weitere Informationen zu PowerApps.\n"
+prerequisites: Keine
 iconUrl: http://via.placeholder.com/120x120
-levels: 
+levels:
 - beginner
-roles: 
+roles:
 - business-user
-products: 
+products:
 - bizapps
 - bizapps-d365
 - bizapps-power-apps
-units: 
+units:
 - learn-bizapps.powerapps-manage.1-powerapps-versions
 - learn-bizapps.powerapps-manage.2-powerapps-share
 - learn-bizapps.powerapps-manage.3-powerapps-environments
