Added Continue document with error as False.

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -4,7 +4,7 @@
             "docset_name": "learn-bizapps-pr",
             "build_source_folder": "learn-bizapps-pr",
             "build_output_subfolder": "learn-bizapps-pr",
-            "locale": "de-DE",
+            "locale": "de-de",
             "monikers": [],
             "moniker_ranges": [],
             "open_to_public_contributors": false,
@@ -25,41 +25,32 @@
     ],
     "notification_subscribers": [],
     "sync_notification_subscribers": [],
-    "branches_to_filter": [],
-    "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/learn-bizapps.de-DE",
+    "branches_to_filter": [
+    "live-sxs",
+    "master-sxs",
+    "live"
+    ],
+    "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/learn-bizapps.de-de",
     "git_repository_branch_open_to_public_contributors": "master",
+    "continue_with_document_error": false,
     "skip_source_output_uploading": false,
     "need_preview_pull_request": true,
     "contribution_branch_mappings": {},
     "dependent_repositories": [
       {
-
       "path_to_root": "_themes",
-
-      "url": "https://github.com/Microsoft/templates.docs.msft.de-DE",
-
+      "url": "https://github.com/Microsoft/templates.docs.msft.de-de",
       "branch": "master",
-
       "branch_mapping": {}
-
     },
-
     {
-
       "path_to_root": "_repo.en-us",
-
       "url": "https://github.com/MicrosoftDocs/learn-bizapps-pr",
-
       "branch": "live",
-
       "branch_mapping": {
-
         "live": "live",
-
         "master": "master"
-
       }
-
     }
     ],
     "dependent_packages": [
