commit translated contents

--- a/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/index.yml
+++ b/learn-bizapps-pr/flow/use-flow-to-create-an-approval-flow/index.yml
@@ -1,31 +1,40 @@
-### YamlMime:Module 
-uid: learn-bizapps.flow-create-approval 
-metadata: 
-  title: Create an approval flow 
-  description: Learn how to create an approval request for a SharePoint list.
+### YamlMime:Module
+uid: learn-bizapps.flow-create-approval
+metadata:
+  title: Erstellen eines Genehmigungsflows
+  description: Informationen zum Erstellen eines Genehmigungsflows für eine SharePoint-Liste.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-  #ms.learn-contact: margoc
-title: Create an approval flow 
-summary: Learn the basics of creating an approval flow for a SharePoint list.
-abstract: In this module, you will create an approval flow that uses a SharePoint list. You'll learn how to create a SharePoint list where people can suggest Twitter tweets that can later be approved and posted.
-prerequisites: Rights to create a SharePoint list, a Twitter account
+  ms.openlocfilehash: 2235971a0907a9c22fb58b29a54844c5f3a867dd
+  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2018
+  ms.locfileid: "45600688"
+title: Erstellen eines Genehmigungsflows
+summary: Lernen Sie die Grundlagen für das Erstellen eines Genehmigungsflows für eine SharePoint-Liste kennen.
+abstract: >
+  In diesem Modul erfahren Sie,
+
+  - Wie Sie einen einfachen Flow erstellen, der E-Mail-Anlagen in Ihrem Microsoft OneDrive for Business-Konto speichert
+
+  - Wie Sie einen komplizierteren Flow erstellen, der eine Microsoft SharePoint-Liste verwendet, in der Mitarbeiter Tweets vorschlagen können, die nach ihrer Genehmigung automatisch im Twitter-Konto des Unternehmens gepostet werden
+prerequisites: Keine
 iconUrl: /learn/achievements/use-flow-to-create-an-approval-flow.svg
-levels: 
-- beginner 
-roles: 
-- business-user 
-products:  
+levels:
+- beginner
+roles:
+- business-user
+products:
 - bizapps
 - bizapps-d365
 - bizapps-flow
-units: 
+units:
 - learn-bizapps.flow-create-approval.1-create-approval-request
 - learn-bizapps.flow-create-approval.2-process-approval-request
-- learn-bizapps.flow-create-approval.3-quiz-flow-approval
-- learn-bizapps.flow-create-approval.4-summary-cleanup
+- learn-bizapps.flow-create-approval.3-flow-review
+- learn-bizapps.flow-create-approval.4-quiz-flow-approval
 achievement: learn.flow-create-approval.badge
