--- a/learn-bizapps-pr/flow/get-started-with-flow/index.yml
+++ b/learn-bizapps-pr/flow/get-started-with-flow/index.yml
@@ -8,17 +8,22 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-  ms.openlocfilehash: 6cb1276ae4b51088a3b860208e926fc71267aa99
-  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.openlocfilehash: 3b0ffdf36a190dc557fe6de3933c4ddae529aa83
+  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/10/2018
-  ms.locfileid: "44331375"
+  ms.lasthandoff: 09/14/2018
+  ms.locfileid: "45600619"
 title: Erste Schritte mit Microsoft Flow
-summary: In diesem Modul erfahren Sie grundlegendes zum Erstellen eines Genehmigungsflows.
-abstract: In diesem Modul erfahren Sie, wie Sie einen Genehmigungsflow erstellen, der eine SharePoint-Liste verwendet. Sie erfahren, wie Sie eine SharePoint-Liste erstellen, für die Benutzer Twitter-Tweets vorschlagen können, die später genehmigt und veröffentlicht werden können.
+summary: Microsoft Flow ist ein Onlineworkflowdienst, der Ereignisse (sogenannte *Workflows*) für die gängigsten Apps und Dienste automatisiert.
+abstract: >
+  In diesem Modul erfahren Sie,
+
+  - Wie Sie einen Flow erstellen, der E-Mail-Anlagen in Ihrem Microsoft OneDrive for Business-Konto automatisch speichert
+
+  - Wie Sie einen Flow erstellen, der vorgeschlagene Tweets auf einer Microsoft SharePoint-Liste sammelt und diese postet, wenn sie genehmigt wurden
 prerequisites: Keine
-iconUrl: http://via.placeholder.com/120x120
+iconUrl: /learn/achievements/get-started-with-flow.svg
 levels:
 - beginner
 roles:
