--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/index.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/index.yml
@@ -7,20 +7,23 @@ metadata:
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
-  ms.prod: learning-powerbi
-  ms.openlocfilehash: 0d200c63052e4da76c2f1ed2f547bf442d03386d
-  ms.sourcegitcommit: 6d796874539f76b734a7bb8ff95bef6b87bb9b00
+  ms.prod: learning-power-bi
+  ms.openlocfilehash: 5677c912fdf50f5f123312b7cb9f7214aeddacbd
+  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/11/2018
-  ms.locfileid: "44375465"
+  ms.lasthandoff: 09/14/2018
+  ms.locfileid: "45600711"
 title: Erste Schritte mit Power BI
-summary: Erfahren Sie, was Power BI ist, einschließlich der dazugehörigen Bausteine und wie diese zusammen funktionieren.
-abstract: Power BI ist eine Sammlung aus Softwarediensten und Anwendungen, mit denen Sie eine Verbindung zu den unterschiedlichsten Datenquellen herstellen und überzeugende Visuals und Berichte erstellen können. Sie können durch das Abrufen dieser Berichte oder das Freigeben mit anderen Personen in oder außerhalb Ihrer Organisation profitieren. Lernen Sie die Grundlagen von Power BI, erfahren Sie, welche Power BI-Dienste und -Anwendungen zusammenarbeiten und wie diese zum Erstellen oder Nutzen überzeugender Visuals und Analysen basierend auf Ihren Daten verwendet werden können.
+summary: Power BI ist eine Sammlung aus Softwarediensten und Anwendungen, mit denen Sie eine Verbindung zu den unterschiedlichsten Datenquellen herstellen und überzeugende Visuals und Berichte erstellen können. Sie können durch das Abrufen dieser Berichte oder das Freigeben mit anderen Personen in oder außerhalb Ihrer Organisation profitieren. Erfahren Sie mehr über die Grundlagen von Power BI, wie die Dienste und Anwendungen zusammenarbeiten und wie Sie damit auf Basis Ihrer Daten überzeugende Visuals und Analysen erstellen oder verwenden können.
+abstract: >
+  In diesem Modul erfahren Sie,
+
+  - Wie Sie Power BI verwenden
 prerequisites: Keine
-iconUrl: http://via.placeholder.com/120x120
+iconUrl: /learn/achievements/get-started-with-power-bi.svg
 levels:
-- intermediate
+- beginner
 roles:
 - business-analyst
 products:
