--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps/index.yml
@@ -8,26 +8,26 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: 3b10922017b90ab7705bec589ceec3c90153f761
-  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.openlocfilehash: e5c941821552cafdf3bcb0bb33fa8f1abc91af2f
+  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/10/2018
-  ms.locfileid: "44330257"
+  ms.lasthandoff: 09/14/2018
+  ms.locfileid: "45600757"
 title: Erste Schritte mit PowerApps
 summary: Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.
 abstract: >
-  Aufgaben in diesem Modul:
+  In diesem Modul erfahren Sie,
 
-  - Finden Sie heraus, wie PowerApps zur Effizienz Ihres Unternehmens beitragen kann.
+  - Wie PowerApps zur Effizienz Ihres Unternehmens beitragen kann
 
-  - Erfahren Sie, wie Sie verschiedene Technologien verwenden, um verschiedene Aufgaben in PowerApps zu erledigen.
+  - Wie Sie mit verschiedenen Technologien unterschiedliche Aufgaben in PowerApps erledigen
 
-  - Lernen Sie die verschiedenen Möglichkeiten zum Erstellen einer App in PowerApps kennen.
+  - Welche Möglichkeiten Sie zum Erstellen einer App in PowerApps haben
 
-  - Erstellen Sie Ihre erste App aus Daten in einer Excel-Arbeitsmappe.
+  - Wie Sie Ihre erste App aus Daten in einer Excel-Arbeitsmappe erstellen
 prerequisites: Keine
-iconUrl: http://via.placeholder.com/120x120
+iconUrl: /learn/achievements/get-started-with-powerapps.svg
 levels:
 - beginner
 roles:
