commit translated contents

--- a/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/index.yml
@@ -8,15 +8,15 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: 08fb2d98e69df17fc3662f740e5c4de3da7b8eed
-  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.openlocfilehash: b0d5977a99c331f2a8f8b2351266a41db8c2a4ce
+  ms.sourcegitcommit: 1e4ec50e3f3c2902d4342a9587f6cc5848193a1e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/10/2018
-  ms.locfileid: "44331490"
+  ms.lasthandoff: 09/13/2018
+  ms.locfileid: "45532656"
 title: Verwalten von Apps in PowerApps
 summary: Verwalten Sie App-Versionen, App-Freigaben und Umgebungen in PowerApps.
-abstract: "Aufgaben in diesem Modul: \n- Lernen Sie, wie Sie App-Versionen überprüfen und wiederherstellen.\n- Finden Sie heraus, wie Sie eine App freigeben, einschließlich Berechtigungen und Benachrichtigungen.\n- Erfahren Sie, was Umgebungen sind, wie sie erstellt werden und wie die Sicherheitsverwaltung funktioniert.\n- Erhalten Sie weitere Informationen zu PowerApps.\n"
+abstract: "Aufgaben in diesem Modul: \n- Lernen Sie, wie Sie App-Versionen überprüfen und wiederherstellen können.\n- Finden Sie heraus, wie Sie eine App freigeben, einschließlich Berechtigungen und Benachrichtigungen.\n- Erfahren Sie, was Umgebungen sind, wie sie erstellt werden und wie die Sicherheitsverwaltung funktioniert.\n- Erhalten Sie weitere Informationen zu PowerApps.\n"
 prerequisites: Keine
 iconUrl: http://via.placeholder.com/120x120
 levels:
