--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps/index.yml
@@ -43,4 +43,5 @@ units:
 - learn-bizapps.powerapps-get-started.4-powerapps-ways-to-build
 - learn-bizapps.powerapps-get-started.5-powerapps-create-first
 - learn-bizapps.powerapps-get-started.6-powerapps-quiz-get-started
+- learn-bizapps.powerapps-get-started.7-summary-cleanup
 achievement: learn.powerapps-get-started.badge
