--- a/learn-bizapps-pr/flow/get-started-with-flow/index.yml
+++ b/learn-bizapps-pr/flow/get-started-with-flow/index.yml
@@ -37,4 +37,5 @@ units:
 - learn-bizapps.flow-get-started.2-flow-create-first
 - learn-bizapps.flow-get-started.3-flow-mobile-app
 - learn-bizapps.flow-get-started.4-quiz-flow-get-started
+- learn-bizapps.flow-get-started.5-summary-cleanup
 achievement: learn.flow-get-started.badge
